<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <RadioGroup
            android:id="@+id/timeRadioButtons"
            android:layout_width="200dp"
            android:layout_height="315dp"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.064"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:id="@+id/day"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/oneDay"
                    android:checked = "true"

                    />

                <RadioButton
                    android:id="@+id/sevenDays"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/sevenDays" />

                <RadioButton
                    android:id="@+id/month"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/thirtyDays" />

                <RadioButton
                    android:id="@+id/year"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/threehundredDays" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/metricRadioButtons"
            android:layout_width="200dp"
            android:layout_height="315dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeRadioButtons"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

                <RadioButton
                    android:checked = "true"
                    android:id="@+id/caloriesRB"
                    android:layout_width="match_parent"
                    android:layout_height="107dp"

                    android:text="@string/calories" />

                <RadioButton
                    android:id="@+id/stepsRB"
                    android:layout_width="match_parent"
                    android:layout_height="107dp"
                    android:text="@string/steps" />

        </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>